2001-04-24  Martin Baulig  <baulig@suse.de>

	* gnome-init.c: Reflect latests GnomeProgram API changes.

2001-04-19  Michael Meeks  <michael@ximian.com>

	* gnome-init.c (libgnomeui_constructor): setup the properties to
	be the same as the code that sets them - using the defines.

2001-04-19  Michael Meeks  <michael@ximian.com>

	* libgnomeui.h: add gnome-canvas-init.h

	* gnome-canvas-init.h: add.

	* Makefile.am: add gnome-canvas-init.[ch]

2001-04-18  Martin Baulig  <baulig@suse.de>

	* gnome-init.c (libbonoboui_module_init): Added libbonoboui initialization here;
	no "real" code here yet.
	(libgnomeui_module_requirements): Added libbonobo.

2001-04-18  Martin Baulig  <baulig@suse.de>

	* gnome-icon-entry.c: Comment out gnome_uri_list_extract_filenames() to make
	it compile [FIXME].

2001-04-17  Martin Baulig  <baulig@suse.de>

	* gnome-init.c: Started to use GnomeProgram properties.

2001-04-17  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Don't compile gnome-gconf.c and oafgnome.c.

	* gnome-app-helper.c (gnome_gconf_get_gnome_libs_settings_relative):
	#define this to NULL (FIXME).

	* gnome-gconf.h (gnome_gconf_module_info): Removed external declaration; this
	is in libgnome now.
	(GNOME_GCONF_INIT): Removed.
	(gnome_get_gconf_client): Made this a macro which uses
	gnome_program_get_gconf_client (gnome_program_get ()).

2001-04-15  Martin Baulig  <baulig@suse.de>

	* libgnomeuiP.h (gnome_i18n_get_language_list, gnome_i18n_get_preferred_language):
	Provide external declarations for these functions here [FIXME: broken].

2001-04-15  Martin Baulig  <baulig@suse.de>

	* gnome-i18nP.h: Removed; #include <libgnomebase/gnome-i18n.h> instead.

2001-04-14  Martin Baulig  <baulig@suse.de>

	* gnome-init.h (gtk_module_info): Removed external declaration.
	(LIBGNOMEUI_INIT): Removed #define.

	* gnome-init.c (libgnome_module_requires): Added libgnomecanvas_module_info.
	(gtk_module_info): Removed GTK+ init code; this is already in libgnomecanvas.